<resources>
    <string name="app_name">MyPocketLib</string>
    <string name="library">Library</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="backward">backward</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="see_also">See also</string>
    <string name="wrg_login">Invalid login</string>
    <string name="wrg_password">Invalid password</string>
    <string name="users_grade">Users grade</string>
    <string name="book_language">Book language</string>
    <string name="login_already_exist">Login already exist</string>
    <string name="author">Author</string>
    <string name="grade">Grade</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="read">Read</string>
    <string name="login_is_too_short">Login is too short</string>
    <string name="email_is_too_short">Email is too short</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="login_info">Oops, you\'re not logged in. Please register or log in to your account to have access to your lists.</string>
    <string name="log_out">Log Out</string>
    <string name="my_lists">My Lists:</string>
    <string name="to_read">To Read</string>
    <string name="reading">Reading</string>
    <string name="add_to_lists">Add to Lists</string>
    <string name="book_image">Book image</string>
    <string name="search">Search...</string>
</resources>