<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserLibraryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBackground"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_sign"
            android:fontFamily="@font/afacad_font"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="@color/layoutBackground"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/afacad_font"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/btmNavBackground"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="@font/afacad_font"
            android:text="@string/my_lists"
            android:textColor="@color/btmNavBackground"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_sign"
                android:fontFamily="@font/afacad_font"
                android:gravity="center"
                android:textColor="@color/layoutBackground"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/reading" />

            <TextView
                android:id="@+id/tvRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_sign"
                android:fontFamily="@font/afacad_font"
                android:gravity="center"
                android:textColor="@color/layoutBackground"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/read" />

            <TextView
                android:id="@+id/tvToRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_sign"
                android:fontFamily="@font/afacad_font"
                android:gravity="center"
                android:textColor="@color/layoutBackground"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/to_read" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</FrameLayout>