<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBackground"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/layoutBackground"
            android:contentDescription="@string/backward"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/afacad_font"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/btmNavBackground"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edLogin"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:autofillHints="login" />

        <EditText
            android:id="@+id/edEmail"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/edPas"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/tvPasForgot"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/afacad_font"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/btmNavBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <android.widget.Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_button"
                android:fontFamily="@font/afacad_font"
                android:text="@string/sign_up"
                android:textColor="@color/layoutBackground"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.widget.Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_button"
                android:fontFamily="@font/afacad_font"
                android:text="@string/sign_in"
                android:textColor="@color/layoutBackground"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>