<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBackground"
        android:orientation="vertical">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/layoutBackground"
        android:contentDescription="@string/backward"
        android:src="@drawable/ic_back" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/layoutBackground"
        app:cardCornerRadius="25dp">

        <ImageView
            android:id="@+id/imBook"
            android:layout_width="@dimen/im_widthBookLayout"
            android:layout_height="@dimen/im_heightookLayout"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/book_drugoj_mir_popadanec" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_rounded_layout"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/shape_rounded_layout"
            android:gravity="center"
            tool:text="Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoA"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/shape_rounded_layout"
                android:paddingStart="10dp"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tvAuthor"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_layout"
                android:gravity="center"
                tool:text="Athor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoG"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/shape_rounded_layout"
                android:paddingStart="10dp"
                android:text="@string/grade" />

            <TextView
                android:id="@+id/tvGrade"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_layout"
                android:gravity="center"
                tool:text="★★★☆☆" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoL"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/shape_rounded_layout"
                android:paddingStart="10dp"
                android:text="@string/language" />

            <TextView
                android:id="@+id/tvLang"
                style="@style/TextStyleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_layout"
                android:gravity="center"
                tool:text="English" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvInfoD"
            style="@style/TextStyleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rounded_layout"
            android:gravity="center"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextStyleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rounded_layout"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            tool:text="dkjsdglskdfjskldfj;ldkfls;kf
                       ;slfksdl;fslfmsdlfl;smsdlfslf
                       ;dffffffffffffff;;;;mm,,,,,,,,
                       ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,s'dggg" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/btnRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_button"
            android:fontFamily="@font/afacad_font"
            android:text="@string/read"
            android:textColor="@color/layoutBackground"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>